# towr

./: README.md
Biped_trajectory/: Forward.bag  Forward1.bag  Forward2.bag  Gait1_non_op.bag  Gait1_op.bag  Gait2_non_op.bag
towr/: CMakeLists.txt
towr/include/towr/: nlp_formulation.h
towr/include/towr/initialization/: gait_generator.h  quadruped_gait_generator.h  quadruped_to_biped_gait_generator.h
towr/include/towr/models/: robot_model.h
towr/include/towr/models/examples/: a1_biped_model.h  a1_model.h  anymal_model.h  biped_model.h
towr/src/: biped_gait_generator.cc  gait_generator.cc  nlp_formulation.cc  quadruped_to_biped_gait_generator.cc  robot_model.cc
towr_ros/: CMakeLists.txt  package.xml
towr_ros/include/towr_ros/: IK.h  towr_ros_interface.h
towr_ros/launch/: towr_ros.launch
towr_ros/math/: CMakeLists.txt  constants.h  cross_product.h
towr_ros/rviz/: xpp_towr.rviz
towr_ros/src/: IK.cc  towr_ros_app.cc  towr_ros_interface.cc  towr_user_interface.cc
trajectory/: forward.bag  lateral_left.bag  lateral_right.bag  left_turn.bag  right_turn.bag
